--- a/index.html
+++ b/index.html
@@ -57,6 +57,79 @@
         </div>
       </section>
 
+      <section id="pricing" class="bg-light">
+        <div class="container-lg">
+          <div class="text-center">
+            <h2>
+              Pricing Plans
+            </h2>
+            <p class="lead text-muted">
+              Choose a pricing plan to suit you.
+            </p>
+          </div>
+        
+
+        <div class="row justify-content-center align-items-center g-0">
+
+          <div class="col-8 col-lg-4">
+            <div class="card border-0 text-center">
+              <!-- <img src="..." class="card-img-top" alt="..."> -->
+              <div class="card-body">
+                <h5 class="card-title">Starter Edition</h5>
+                <p class="lead card-subtitle">
+                  eBook download only
+                </p>
+                <p class="fw-bold display-5 text-primary py-4">
+                  $12.99
+                </p>
+                <p class="card-text text-muted mx-4 d-none d-md-block">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-outline-primary">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-8 my-4">
+            <div class="card border-primary border-3 text-center">
+              <div class="card-header text-primary">
+                Most Popular
+              </div>
+              <!-- <img src="..." class="card-img-top" alt="..."> -->
+              <div class="card-body">
+                <h5 class="card-title">Starter Edition</h5>
+                <p class="lead card-subtitle">
+                  eBook download only
+                </p>
+                <p class="fw-bold display-5 text-primary py-4">
+                  $12.99
+                </p>
+                <p class="card-text text-muted mx-4 d-none d-md-block">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-outline-primary">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-8">
+            <div class="card border-0 text-center">
+              <!-- <img src="..." class="card-img-top" alt="..."> -->
+              <div class="card-body">
+                <h5 class="card-title">Starter Edition</h5>
+                <p class="lead card-subtitle">
+                  eBook download only
+                </p>
+                <p class="fw-bold display-5 text-primary py-4">
+                  $12.99
+                </p>
+                <p class="card-text text-muted mx-4 d-none d-md-block">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-outline-primary">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      </section>
+
 
 
 
